--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.Font?>
 
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center">
-	<Text text="Graph A"/>
-</GridPane>
+<BorderPane id="BorderPane" xmlns:fx="http://javafx.com/fxml/1">
+</BorderPane>
